--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 
 <head>
     <meta charset="UTF-8">
@@ -10,28 +10,33 @@
 
 <body>
     <header>
-        <h1>LOGO</h1>
+        <div class="logo">
+            <a href="index.html">
+                <img src="logo.webp" alt="Fashion logo">
+            </a>
+        </div>
+
+        <nav>
+            <ul class="menu">
+                <li><a href="index.html">Categories</a></li>
+                <li><a href="index.html">Brands</a></li>
+                <li><a href="index.html">Seasons</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <h1>Categories</h1>
-        <div class="grid_3">
-            <a href="produktliste.html">Accessories</a>
+        <div class="categories_grid">
+            <!-- <a href="produktliste.html">Accessories</a>
             <a href="produktliste.html">Apparel</a>
             <a href="produktliste.html">Footwear</a>
             <a href="produktliste.html">Free Items</a>
             <a href="produktliste.html">Personal Care</a>
-            <a href="produktliste.html">Sporting Goods</a>
-        </div>
-        <div class="box7">
-            <div><img src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
-                    alt="Sahara Team India Fanwear Round Neck Jersey">
-                <p>Sahara</p></div>
-            <div><img src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp" alt="Blue T20 Indian Cricket Jersey">
-            </div>
-            <div><img src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp" alt="Deck Navy Blue Backpack"></div>
-            <div><img src="https://kea-alt-del.dk/t7/images/webp/640/1526.webp" alt="Big Cat Backpack Black"></div>
+            <a href="produktliste.html">Sporting Goods</a> -->
         </div>
     </main>
+    <footer></footer>
+    <script src="index.js"></script>
 </body>
 
 </html>
