--- a/produktliste.html
+++ b/produktliste.html
@@ -1,21 +1,94 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produktliste</title>
     <link rel="stylesheet" href="style.css">
-
 </head>
 
 <body>
     <header>
-        <h1>LOGO</h1>
+        <div class="logo">
+            <a href="index.html">
+                <img src="logo.webp" alt="Fashion logo">
+            </a>
+        </div>
+
+        <nav>
+            <ul class="menu">
+                <li><a href="index.html">Categories</a></li>
+                <li><a href="index.html">Brands</a></li>
+                <li><a href="index.html">Seasons</a></li>
+            </ul>
+        </nav>
     </header>
+
     <main>
-        
+
+        <h1>Produkter</h1>
+
+        <div class="category_list_container">
+            <!-- <div class="item">
+                <img src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp" alt="T-shirt">
+                <h2>Sahara Team India Fanwear Round Neck Jersey</h2>
+                <h3>Nike</h3>
+                <div class="pris">
+                    <p>895,-</p>
+                </div>
+                <a href="produkt.html">Read more</a>
+            </div>
+
+            <div class="item">
+                <img src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp" alt="T-shirt">
+                <h2>Blue T20 Indian Cricket Jersey</h2>
+                <h3>Nike</h3>
+                <div class="pris">
+                    <p>1595,-</p>
+                    <p>Now DKK 1560,-</p>
+                </div>
+                <a href="produkt.html">Read more</a>
+
+                <div class="discount">
+                    <p>34%</p>
+                </div>
+            </div>
+
+            <div class="item">
+                <img class="sold_out_img" src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp" alt="T-shirt">
+                <div class="sold_out">
+                    <p>Sold out</p>
+                </div>
+                <h2>Mean Team India Cricket Jersey</h2>
+                <h3>Nike</h3>
+                <div class="pris">
+                    <p>2495,-</p>
+                </div>
+                <a href="produkt.html">Read more</a>
+            </div>
+
+            <div class="item">
+                <img class="sold_out_img" src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp" alt="T-shirt">
+                <div class="sold_out">
+                    <p>Sold out</p>
+                </div>
+                <h2>Deck Navy Blue Backpack</h2>
+                <h3>Puma</h3>
+                <div class="pris">
+                    <p>1299,-</p>
+                </div>
+                <a href="produkt.html">Read more</a>
+
+                <div class="discount">
+                    <p>34%</p>
+                </div>
+            </div> -->
+
+        </div>
     </main>
+    <footer></footer>
+    <script src="produktliste.js"></script>
 </body>
 
 </html>
