--- a/produkt.html
+++ b/produkt.html
@@ -1,16 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produkt</title>
     <link rel="stylesheet" href="style.css">
-
 </head>
+
 <body>
-    <header><h1>LOGO</h1>
-        
-</header>
-    <main></main>
+    <header>
+        <div class="logo">
+            <a href="index.html">
+                <img src="logo.webp" alt="Fashion logo">
+            </a>
+        </div>
+
+        <nav>
+            <ul class="menu">
+                <li><a href="index.html">Categories</a></li>
+                <li><a href="index.html">Brands</a></li>
+                <li><a href="index.html">Seasons</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main class="productContainer">
+
+    </main>
+    <footer></footer>
+    <script src="./produkt.js"></script>
 </body>
+
 </html>
