--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="logo">
             <a href="index.html">
-                <img src="logo.webp" alt="Fashion logo">
+                <img src="logo.png" alt="Fashion logo">
             </a>
         </div>
 
